# Rust-Reminder

./: .env  Cargo.toml  readme.md
src/: main.rs  private.rs
src/api/: helper.rs  middleware.rs  mod.rs  task_api.rs  user_api.rs
src/models/: task_model.rs  user_model.rs
src/repository/: mongodb_repo.rs
src/routes/: task_routes.rs  user_routes.rs
