[package]
name = "rust-reminder-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"
pwhash = "1.0.0"
serde_json = "1.0.114"
jsonwebtoken = "9.2.0"
regex = "1.10.3"
chrono = { version = "0.4", features = ["serde"] }


[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"]
